Fix tab content IDs and update HTML for tabs

--- a/pipeline_app/templates/app/overview.html
+++ b/pipeline_app/templates/app/overview.html
@@ -7,7 +7,7 @@
 <div id="tabs">
     <span class="tab-text active-tab" data-tab="overview">Overview</span>
     <span class="tab-text" data-tab="data-preview">Data Preview</span>
-    <span class="tab-text" data-tab="Visualizations">Visualizations</span>
+    <span class="tab-text" data-tab="visualizations">Visualizations</span>
     <span class="tab-text" data-tab="model-training">Model Training</span>
     <span class="tab-text" data-tab="testing">Testing</span>
 </div>
@@ -210,7 +210,7 @@
 </div>
 
 <!-- VISUALIZATIONS CONTENT -->
-<div id="Visualizations" class="tab-content" style="display:none;">
+<div id="visualizations" class="tab-content" style="display:none;">
 
     <!-- Custom dropdown -->
     <div class="column-selection">
