--- a/staticfiles/style.css
+++ b/staticfiles/style.css
@@ -9,6 +9,8 @@ body {
     line-height: 1.6;      
 }
 
+
+
 /* Heading */
 .center-heading {
     text-align: center !important;
@@ -77,6 +79,9 @@ body {
 .tab-text {
     transition: color 0.3s, text-shadow 0.3s;
 }
+
+
+
 
 .tab-separator {
     border-bottom: 2px solid #444;  /* line color */
@@ -330,10 +335,17 @@ body {
 }
 
 
+
 .uploaded-file-name {
-    margin-top: 10px;
-    color: #00bfff;
-    font-weight: bold;
+    font-size: 10px;
+    /* font-weight: bold; */
+    color: #ccc;
+    font-family: Verdana, Geneva, sans-serif;
+    /* margin-top: 40px; */
+    /* margin-bottom: 10px; */
+    /* text-align: left; */
+    margin-left: 20px;
+
 }
 /*preview-heading*/
 .preview-heading {
